--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "format": "prettier --write src/**/*.js"
+    "lint:fix": "eslint ./src --fix --color",
+    "format": "prettier --write src/**/*.js",
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +56,18 @@
     "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
     "webpack": "^5.97.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint",
+      "npm run lint:fix",
+      "npm run format",
+      "git add"
+    ]
   }
 }
