--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,6 @@
 {
-  "*.ts": "npx tsc --noEmit",
-  "*.{js,jsx,ts,tsx}": "npx eslint",
-  "*.{js,jsx,ts,tsx,html,css}": "npx prettier --check"
+  "src/**/*.{js, jsx}": [
+    "npm run lint:fix",
+    "npm run format"
+  ]
 }
