--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix --color || true",
+    "lint:fix": "eslint ./src --fix",
     "format": "prettier --write src/**/*.js",
     "prepare": "husky"
   },
